name:                aeson-streams
version:             0.1.0
Cabal-Version:       >= 1.8
synopsis:            An HTTP client library for JSON-based APIs
description:         An HTTP client library for JSON-based APIs using aeson and http-streams.
category:            Web
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/noteed/aeson-streams

source-repository head
  type: git
  location: git://github.com/noteed/aeson-streams.git

library
  build-depends:       aeson,
                       attoparsec,
                       base == 4.*,
                       bytestring,
                       HsOpenSSL,
                       http-streams,
                       io-streams
  exposed-modules:     Network.Aeson.Client
  ghc-options:         -Wall
